<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appheadline"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/safariapp"
                android:textColor="#F44336"
                android:textColorHighlight="#000000"
                android:textSize="28sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/animalList"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/animallist"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/axl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="AXOLOTL"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/axlimage"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                app:srcCompat="@drawable/axl" />

            <TextView
                android:id="@+id/axltext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/axltext" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/ant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="ANT"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <ImageView
                android:id="@+id/antimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ant"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/anttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/ant" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="ARCTIC WOLF" />

            <ImageView
                android:id="@+id/wolfimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/wolf"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/wolftext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/wolf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/alpaca"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="ALPACA" />

            <ImageView
                android:id="@+id/alpacaimage"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/alpaca" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/alpacatext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/alpacas" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/alligator"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="ALLIGATOR" />

            <ImageView
                android:id="@+id/alligatorpic"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/alligator" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/alligatortext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT ALLIGATORS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/bear"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="BEAR" />

            <ImageView
                android:id="@+id/bearpic"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/bear" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/beartext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT BEARS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/beagle"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="BEAGLE" />

            <ImageView
                android:id="@+id/Beagle"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/beagle"/>

            <TextView
                android:id="@+id/beagletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT BEAGLES" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/rhino"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="BLACK RHINOCEROS" />

            <ImageView
                android:id="@+id/br"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/br"/>

            <TextView
                android:id="@+id/brtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT BLACK RHINOCEROS"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/spooder"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="BLACK WIDOW SPIDER" />

            <ImageView
                android:id="@+id/blackwidowspider"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/bws"/>

            <TextView
                android:id="@+id/bwstext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT BLACK WIDOW SPIDER"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/butterfly"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:text="BUTTERFLY" />

            <ImageView
                android:id="@+id/butterflypic"
                android:layout_width="match_parent"
                android:layout_height="315dp"
                app:srcCompat="@drawable/butterfly"/>

            <TextView
                android:id="@+id/butterflytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="CLICK HERE TO FIND OUT MORE ABOUT BUTTERFLY"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>